<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/img_main" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    style="@style/fashion_sale"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:text="@string/fashion_sale" />

                <Button
                    android:id="@+id/sale_check_btn"
                    style="@style/btn_main"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/btn_buton"
                    android:text="Check" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                style="@style/new_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|clip_horizontal"
                android:layout_margin="15dp"
                android:text="@string/new_main" />

            <TextView
                style="@style/never_seen_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_margin="15dp"
                android:text="@string/never_seen_before" />

            <TextView
                android:id="@+id/view_all_tv"
                style="@style/view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_margin="15dp"
                android:text="@string/view_all" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sale_product_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:itemCount="3"
            tools:listitem="@layout/item_new_vertical_product" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/new_product_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:itemCount="3"
            tools:listitem="@layout/item_new_vertical_product"
            />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
